objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountVal__c</fullName>
        <description>R-303, to filter out all account this customer sold to , prospect having competitor value</description>
        <formula>IF( AND((RecordType.Name == &quot;Customer Sold-To&quot; || RecordType.Name == &quot;Prospect&quot;), 
CompetitorOpp__c == True ), 
&quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountVal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_History__c</fullName>
        <description>R1-R-0013-This field is used to indicate Account History.</description>
        <label>Account History</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Logo__c</fullName>
        <description>R5_R-1006</description>
        <formula>IF(OR(CONTAINS(UltimateParentName__c, &apos;Sherwin Williams&apos;),
CONTAINS(UltimateParentName__c, &apos;AkzoNobel&apos;),
CONTAINS(UltimateParentName__c, &apos;Valspar&apos;),
CONTAINS(UltimateParentName__c, &apos;PPG&apos;),
CONTAINS(UltimateParentName__c, &apos;3M&apos;),
CONTAINS(UltimateParentName__c, &apos;P&amp;G&apos;),
CONTAINS(UltimateParentName__c, &apos;Lubrizol&apos;),
CONTAINS(UltimateParentName__c, &apos;Exxon Mobil&apos;),
CONTAINS(UltimateParentName__c, &apos;Sabic&apos;),
CONTAINS(UltimateParentName__c, &apos;Axalta&apos;),
CONTAINS(UltimateParentName__c, &apos;UPM RAFLATAC&apos;),
Top_Level__c = TRUE
),IMAGE(&quot;/resource/1568964821000/Key_Account&quot;, &quot; &quot;,100,170),
&apos; &apos;)</formula>
        <label>Account Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_2__c</fullName>
        <description>R1_R-0003</description>
        <label>Account Name 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>AP_Account_Plan__c</referenceTo>
        <relationshipLabel>Related Account Plan</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Type_Value__c</fullName>
        <description>R1_D-0025</description>
        <formula>TEXT(Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R1_R-0236</description>
        <inlineHelpText>It will show the total number of children related to the parent</inlineHelpText>
        <label>Accounts</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_BUs__c</fullName>
        <description>R1_R-0249</description>
        <label>Active BUs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primacor</fullName>
                </value>
                <value>
                    <fullName>SKGC</fullName>
                </value>
                <value>
                    <fullName>Functional Polyolefins</fullName>
                    <label>SKFP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Latitude__c</fullName>
        <description>R4_R-0945_To copy billing latitude address</description>
        <formula>BillingLatitude</formula>
        <label>Address_Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Longitude__c</fullName>
        <description>R4_R-0945</description>
        <formula>BillingLongitude</formula>
        <label>Address_Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_visited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check weather atleast one call/visit report is related to the account or not.</description>
        <label>Already visited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnualVisitFrequency_CVRper_year__c</fullName>
        <description>R1_R-0137_To Calculate number of call/visit record for current year</description>
        <label>Current Annual Visit Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEST_Flag_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4_R_0994</description>
        <label>BEST Flag For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Application_2__c</fullName>
        <label>BU Application 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BU_application_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>BU_application_2_values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Non_Strategic_ID__c</fullName>
        <formula>IF(
   AND(
      RecordType.Name = &apos;Hierarchical Account L3&apos;, 
      ParentId = null),
         &quot;SN2001&quot;,
		 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Non Strategic ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Non_Strategic_Record_type__c</fullName>
        <formula>IF(
   AND(
      RecordType.Name = &apos;Hierarchical Account L3&apos;, 
      ParentId = null),
         &quot;ZCHF&quot;,
		 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Non Strategic Record type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_application_1__c</fullName>
        <label>BU application 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Application_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Account_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Salesforce_Cust_Id__c</fullName>
        <formula>Salesforce_customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Salesforce Cust Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circular_Economy_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular Economy Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompetitorOpp__c</fullName>
        <description>R3_R_0897</description>
        <formula>NOT( ISNULL( Competitor__c ) )</formula>
        <label>CompetitorOpp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>R1_R-0217_R-0849</description>
        <inlineHelpText>Select here the BU for which the Account is a competitor</inlineHelpText>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_Comment__c</fullName>
        <description>R1_R-0611</description>
        <label>Conversion Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversion_Instructions__c</fullName>
        <description>R1_R-0611</description>
        <formula>&apos;Please insert/confirm the email address to who the request must be sent.Use the text box &quot;Comment&quot; to record any additional information that would help the Assistant creating the customer in SAP.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_group__c</fullName>
        <description>R1_R-0003 created for power Bi integration</description>
        <label>Customer group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Related_Account_ID__c</fullName>
        <description>R4_R-0945</description>
        <formula>DL_Related_Account__r.SAP_BEST_ID__c</formula>
        <label>DL Related Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4_R-0945</description>
        <label>DL Related Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Sold to Or Ship to Account Record Type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Ship-To, Customer Sold-To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (DL Related Account)</relationshipLabel>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DL_SAP_BEST_ID__c</fullName>
        <description>R-1221</description>
        <formula>IF(
ISBLANK(DL_Related_Account_ID__c),
SAP_BEST_ID__c,
DL_Related_Account_ID__c)</formula>
        <label>DL SAP BEST ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_SFDC_ID__c</fullName>
        <description>R5_R-1128</description>
        <label>DL SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_Type__c</fullName>
        <defaultValue>IF(($RecordType.DeveloperName = &apos;Retailer&apos;),&apos;Retailer&apos;,&apos;&apos;)</defaultValue>
        <description>R4_R-0945</description>
        <label>DL Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diamond_Flag_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5_R_1132</description>
        <label>Diamond Flag For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Locator_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4_R-0945</description>
        <inlineHelpText>If you check this box, please make sure to fill in the Mailing Name, Locator Address, DL related Account and the DL Type</inlineHelpText>
        <label>Distributor Locator Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R0217_Field for Identifying distributor</description>
        <label>Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fifth_Level_Parent_Account__c</fullName>
        <description>R1_Account Hierarchy Requirement</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)),Parent.Parent.Parent.Parent.Parent.Id, 
null)</formula>
        <inlineHelpText>This will store the 5th Level parent account name based on the record type</inlineHelpText>
        <label>5th Level Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R-0066_ checkbox field unticked by default</description>
        <label>Flag For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Level_Parent_Account__c</fullName>
        <description>R1_Account Hierarchy Requirement</description>
        <formula>IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)),Parent.Parent.Parent.Parent.Id, 
null)</formula>
        <inlineHelpText>This will store the 4th Level parent account name based on the record type</inlineHelpText>
        <label>4th Level Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GKAM_Comment__c</fullName>
        <description>R1-R-0013-This field is used to indicate the priority of account.
PSR-000304 - Rename this field by &quot;GKAM Comment&quot;</description>
        <label>GKAM Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Global_Non_Strategic_ID__c</fullName>
        <formula>IF(
   AND(
      RecordType.Name = &apos;Hierarchical Account L4&apos;, 
      ParentId = null),
         &quot;SI906&quot;,
		 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Non Strategic ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Non_Strategic_Record_Type__c</fullName>
        <formula>IF(
   AND(
      RecordType.Name = &apos;Hierarchical Account L4&apos;, 
      ParentId = null),
         &quot;ZCHG&quot;,
		 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Non Strategic Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Account_L1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchical Account L1</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Value does not exist or does not match filter criteria. Issue with Record Type of Account.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Hierarchical Account L1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Hierarchical Account L1)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Account_L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchical Account L2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Hierarchical Account L2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Hierarchical Account L2)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchical_Account_L3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchical Account L3</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Hierarchical Account L3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Hierarchical Account L3)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R6_R-1159</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Language_Address__c</fullName>
        <description>R1_R-0623</description>
        <label>International Language Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <description>R1-R-0134-This field is used to indicate the last date of the visit.</description>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Salesforce_ID__c</fullName>
        <description>R1_D-0088_Legacy Field to capture SAP Account Id</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce ID</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Local_Non_Strategic_ID__c</fullName>
        <formula>IF(
   AND(
      RecordType.Name = &apos;Customer Sold-To&apos;, 
      ParentId = null),
         &quot;C10997&quot;,
IF(	

AND(RecordType.Name = &apos;Hierarchical Account L1&apos;, 
      ParentId = null),
         &quot;S9000&quot;,

IF(      AND( RecordType.Name = &apos;Hierarchical Account L2&apos;, 
      ParentId = null),
         &quot;SG1000&quot;,

	 NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Non Strategic ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Non_Strategic_Record_Type__c</fullName>
        <formula>IF(
   AND(
RecordType.Name = &apos;Customer Sold-To&apos;,
      ParentId = null),
         &quot;ZCH2&quot;,
		 NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Non Strategic Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5_R-1128</description>
        <label>Related Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Customer Ship to or Customer Sold to or Prospect account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Ship-To, Customer Sold-To, Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locator Address</relationshipLabel>
        <relationshipName>Account8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locator_City__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_Country__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locator_Email_Address__c</fullName>
        <description>R4-R-0945</description>
        <label>Locator Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Locator_Latitude1__c</fullName>
        <description>R6_R1221</description>
        <formula>ShippingLatitude</formula>
        <label>Locator Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locator_Longitude1__c</fullName>
        <description>R6_R-1221</description>
        <formula>ShippingLongitude</formula>
        <label>Locator Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locator_Phone__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Locator_State_Province__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_Street__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_Website__c</fullName>
        <description>R5_R-1128</description>
        <label>Locator Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Locator_ZIP_Postal_code__c</fullName>
        <description>R4_R-0973</description>
        <label>Locator ZIP/Postal code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_laltitude__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator Latitude1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locator_longitude__c</fullName>
        <description>R4_R-0945</description>
        <label>Locator Longitude1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPC_Reference__c</fullName>
        <description>R2_R-0766/PSR-001418</description>
        <label>Other ERP Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>R4-R-0945</description>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>R4_R-0945</description>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <description>R4-R-0945</description>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <description>R4-R-0945</description>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_ZIP_Postal_code__c</fullName>
        <description>R4_R-0945</description>
        <label>Mailing ZIP/Postal code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_name__c</fullName>
        <description>R4_R-0945</description>
        <label>Mailing name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Ultimate_Parent_with_Name__c</fullName>
        <description>R6_R-1006</description>
        <formula>IF(OR(
CONTAINS(Name, &apos;Sherwin Williams&apos;),
CONTAINS(Name, &apos;AkzoNobel&apos;),
CONTAINS(Name, &apos;Valspar&apos;),
CONTAINS(Name, &apos;PPG&apos;),
CONTAINS(Name, &apos;3M&apos;),
CONTAINS(Name, &apos;P&amp;G&apos;),
CONTAINS(Name, &apos;Lubrizol&apos;),
CONTAINS(Name, &apos;Exxon Mobil&apos;),
CONTAINS(Name, &apos;Sabic&apos;),
CONTAINS(Name, &apos;Axalta&apos;),
CONTAINS(Name, &apos;UPM RAFLATAC&apos;)
), &apos;TRUE&apos;,&apos; &apos;)</formula>
        <label>Match Ultimate Parent with Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mention__c</fullName>
        <description>R1_R-0611</description>
        <formula>&apos;Automatic information also sent to the receiver.&apos;</formula>
        <label>Mention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkto_Account_RT_Name__c</fullName>
        <description>R1_R-0082</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RT Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkto_account_owner_Phone__c</fullName>
        <description>R1_R-0082</description>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkto_account_owner_Profile__c</fullName>
        <description>R1_R-0082</description>
        <formula>Owner.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkto_account_owner_Role__c</fullName>
        <description>R1_R-0082</description>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mkto_account_owner_job_title__c</fullName>
        <description>R1_R-0082</description>
        <formula>Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NICE_Flag_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1_R-0599</description>
        <label>NICE Flag For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameChangedDateL2__c</fullName>
        <label>NameChangedDateL2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameChangedDateL3__c</fullName>
        <label>NameChangedDateL3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameChangedDateL4__c</fullName>
        <label>NameChangedDateL4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameChangedDate__c</fullName>
        <label>NameChangedDateL1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NameCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be checked/unchecked via workflow based on Old Name value.</description>
        <label>NameCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Contains_C_O__c</fullName>
        <description>R1_R0601</description>
        <formula>IF(CONTAINS(Account_Name_2__c, &apos;C/O&apos;) ,&quot;present&quot;, &quot;Not Present&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Contains C/O</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nameplate_Production_Capacity__c</fullName>
        <description>R1_R-0645</description>
        <label>Nameplate Production Capacity</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Parent__c</fullName>
        <description>Field to store old value of account Parent which be will used as a criteria in a batch class to send data of Bostik Account Hierarchy</description>
        <label>Old Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type__c</fullName>
        <description>Field to store old value of account record type which will be used as a criteria in a batch class to send data of Bostik Account Hierarchy</description>
        <label>Old Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_level_Parent_Account__c</fullName>
        <description>R1_Account Hierarchy Requirement</description>
        <formula>IF(NOT(ISBLANK(Parent.Name)),Parent.Id, 
null)</formula>
        <inlineHelpText>This will store the parent account name based on the record type</inlineHelpText>
        <label>1st level Parent Account</label>
        <type>Text</type>
    </fields>
</CustomObject>